# glm-ocr-onnx

./: .gitignore  LICENSE  README.md  pyproject.toml  run_onnx_static.py
examples/result/GLM-4.5V/: result.json  result.md
examples/result/code/: result.json  result.md
examples/result/page/: result.json  result.md
examples/result/paper/: result.json  result.md
scripts/: compare_official_quality.py  export_web_input_json.py  export_web_task_presets.py  prepare_dual_vision_artifact.py  prepare_kv_only_artifact.py  prepare_web_runtime.py  quantize_custom_w8.py  sync_hf_upload_bundle.py
web_runtime/: README.md  index.html  manifest.web.json  package.json  task_presets.json  tsconfig.json
web_runtime/src/: demo.ts  index.ts  ort-global.d.ts  preprocess.ts  runtime.ts  types.ts
